--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: Sagada Peñano
 author: Sagada Peñano
 url: https://www.abhinavsaxena.com/moonwalk # root address of the site
 description: > # description of the site (multiple lines allowed)
-  Sagada's website
+  Hi, I'm Sagada Peñano! I'm a medical physics student at UChicago, a K-12 tutor, an activist, and a musician.
+  Feel free to navigate my website and download my CV here.
 
 permalink: /:slug
 
@@ -23,11 +24,11 @@ theme_config:
   show_description: true # show blog description
   show_navbar: true # show horizontal navbar
   show_footer: true # show footer links in home page,add in _data/home.yml
-  show_copyright: true # show copyright notice in footer
+  show_copyright: false # show copyright notice in footer
   # following keys are using to create home layout
-  show_projects: true # show projects as cards, add in _data/home.yml
-  show_blog: true # show blog posts added in _posts
-  show_old_projects: true # show old projects as cards, add in _data/home.yml
+  show_projects: false # show projects as cards, add in _data/home.yml
+  show_blog: false # show blog posts added in _posts
+  show_old_projects: false # show old projects as cards, add in _data/home.yml
   show_misc_list: false # show generic vertical list for misc details, add _data/home.yml
   # options for "home" page
   home:
